# snimap

./: .gitignore  Cargo.toml  README.md  build.rs  gen_cacert.sh
.github/workflows/: build.yml  release.yml  rust.yml
src/: dirs.rs  handler.rs  main.rs  resolver.rs  tlscert.rs
src/config/: format.rs
