[package]
name = "snimap"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-tls = "^3"
actix-web = { version = "^4", features = ["rustls"] }
async-ctrlc = { version = "^1", features = ["termination"] }
attohttpc = { version = "^0", features = ["form", "compress"] }
awc = { version = "^3", features = ["rustls"] }
dirs-next = "^2"
dns-lookup = "^2"
futures = "^0"
log = "^0"
once_cell = { version = "^1", features = ["parking_lot"] }
pretty_env_logger = "^0"
rcgen = { version = "^0", features = ["pem", "x509-parser"] }
regex = "^1"
rustls = "^0"
serde = "^1"
serde_derive = "^1"
toml = "^0"
webpki-roots = "^0"

[features]
